# guac

./: .gitignore  CMakeLists.txt  README.md  main.cpp  testscript.sh
include/: codebooks.hpp  compress.hpp  decompression_interface.hpp  file_interface.hpp  huffmantree.hpp  type_aliases.hpp  utilities.hpp
src/: codebooks.cpp  compress.cpp  decompression.cpp  decompression_interface.cpp  file_interface.cpp  huffmantree.cpp  main.cpp  utilities.cpp
testfiles/originals/: longer.txt  numbers.txt  numbers2.txt
